update: 清理废弃文件
